Bug 378689 - fancy headers uses wrong indent
Summary: fancy headers uses wrong indent
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-12 09:00 UTC by Martin Koller
Modified: 2022-01-09 15:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (152.91 KB, image/png)
2017-04-12 09:00 UTC, Martin Koller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2017-04-12 09:00:21 UTC
Created attachment 104984 [details]
screenshot

kmail 5.4.80 beta1
When using fancy headers and showing an invitation mail, the header content (not the header names, e.g. mail addresses in From, To, CC and Date) is indented
as far as inside the invitation layout.

The header content should be displayed as in mails without VCS/ICS attachment

screenshot attached.
Comment 1 Martin Koller 2022-01-09 15:19:27 UTC
Git commit a287d490e64f45853ac999c5642082176589ed74 by Martin Koller.
Committed on 09/01/2022 at 15:18.
Pushed by mkoller into branch 'release/21.12'.

Fix header width

M  +1    -0    plugins/messageviewerheaderplugins/fancyheaderstyleplugin/fancyheaderstyleplugin.cpp

https://invent.kde.org/pim/kdepim-addons/commit/a287d490e64f45853ac999c5642082176589ed74