Fix header width

BUG: 378689